wrap only name only fix

--- a/styles/components/Transaction.module.css
+++ b/styles/components/Transaction.module.css
@@ -63,16 +63,15 @@
 }
 
 .partAAccount,
-.dateTime,
-.partyBName,
-.amount {
+.partyBName {
   width: 46%;
   flex-wrap: wrap;
 }
 
 .dateTime,
 .amount {
-  width: 50%;
+  width: 52%;
+  flex-wrap: wrap;
   display: flex;
   justify-content: flex-end;
 }
@@ -106,7 +105,7 @@
 
   .statementUpper,
   .statementLower {
-    padding: 15px 0;
+    padding: 10px 0;
   }
 }
 
